Archive2/c4/60f2092fb4fef5/output
main.cpp: In function 'void safe_increment()':
main.cpp:10:9: error: 'lock_guard' was not declared in this scope
     std:lock_guard<std::mutex> lock(g_i_mutex);
         ^
main.cpp:10:9: note: suggested alternative:
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.2/mutex:371:11: note:   'std::lock_guard'
     class lock_guard
           ^
main.cpp:10:30: error: expected primary-expression before '>' token
     std:lock_guard<std::mutex> lock(g_i_mutex);
                              ^
main.cpp:10:46: error: no matching function for call to 'lock(std::mutex&)'
     std:lock_guard<std::mutex> lock(g_i_mutex);
                                              ^
main.cpp:10:46: note: candidate is:
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.2/mutex:668:5: note: template<class _L1, class _L2, class ... _L3> void std::lock(_L1&, _L2&, _L3& ...)
     lock(_L1& __l1, _L2& __l2, _L3&... __l3)
     ^
/usr/local/include/c++/4.9.2/mutex:668:5: note:   template argument deduction/substitution failed:
main.cpp:10:46: note:   candidate expects 3 arguments, 1 provided
     std:lock_guard<std::mutex> lock(g_i_mutex);
                                              ^
main.cpp:13:5: error: duplicate label 'std'
     std:cout << std::this_thread::get_id() << ": " << g_i << '\n';
     ^
main.cpp:13:9: error: 'cout' was not declared in this scope
     std:cout << std::this_thread::get_id() << ": " << g_i << '\n';
         ^
main.cpp:13:9: note: suggested alternative:
In file included from main.cpp:3:0:
/usr/local/include/c++/4.9.2/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:10:5: warning: label 'std' defined but not used [-Wunused-label]
     std:lock_guard<std::mutex> lock(g_i_mutex);
     ^
